spacing left right fixed

--- a/Stylesheet/myStlyes.css
+++ b/Stylesheet/myStlyes.css
@@ -432,10 +432,10 @@ display: flex;
 flex-wrap:wrap;
 flex-direction: row;
 justify-items:flex-start;
-justify-content:space-around;
+justify-content:space-between;
 
-padding-left:10px;
-padding-right:10px;
+padding-left:15px;
+padding-right:15px;
 padding-top: 15px;
 padding-bottom: 15px;
 height: 400px;
